--- a/PecanTV/Info.plist
+++ b/PecanTV/Info.plist
@@ -28,5 +28,11 @@
             </array>
         </dict>
     </dict>
+    <key>UILaunchStoryboardName</key>
+    <string>LaunchScreen</string>
+    <key>UIStatusBarHidden</key>
+    <true/>
+    <key>UIViewControllerBasedStatusBarAppearance</key>
+    <false/>
 </dict>
 </plist> 
