--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,26 +1,73 @@
-version: '3.8'
 services:
-  db:
-    image: postgres:15
-    restart: always
+  postgres:
+    image: postgres:14
+    container_name: pecantv_db
     environment:
-      POSTGRES_USER: pecantv_user
-      POSTGRES_PASSWORD: pecantv_pass
-      POSTGRES_DB: pecantv_db
+      POSTGRES_DB: pecantv
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres
     ports:
-      - "5432:5432"
+      - "5433:5432"
     volumes:
-      - db_data:/var/lib/postgresql/data
-      - ./init.sql:/docker-entrypoint-initdb.d/init.sql:ro
-  backend:
-    build: ./backend
+      - postgres_data:/var/lib/postgresql/data
+      - ./database/schema.sql:/docker-entrypoint-initdb.d/schema.sql
+    networks:
+      - pecantv_network
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U postgres"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+
+  pgadmin:
+    image: dpage/pgadmin4
+    container_name: pecantv_pgadmin
+    environment:
+      PGADMIN_DEFAULT_EMAIL: admin@pecantv.com
+      PGADMIN_DEFAULT_PASSWORD: admin
+    ports:
+      - "5050:80"
     depends_on:
-      - db
-    ports:
-      - "4000:4000"
-    env_file:
-      - ./backend/.env
+      - postgres
+    networks:
+      - pecantv_network
+
+  data_loader:
+    build:
+      context: ./scripts
+      dockerfile: Dockerfile
+    container_name: pecantv_data_loader
     volumes:
-      - ./backend:/usr/src/app
+      - ./scripts:/app
+      - ./scripts/credentials.json:/app/credentials.json
+    environment:
+      - GOOGLE_APPLICATION_CREDENTIALS=/app/credentials.json
+    depends_on:
+      postgres:
+        condition: service_healthy
+    networks:
+      - pecantv_network
+
+  api:
+    build:
+      context: ./api
+      dockerfile: Dockerfile
+    container_name: pecantv_api
+    ports:
+      - "8000:8000"
+    volumes:
+      - ./api:/app
+    environment:
+      - DATABASE_URL=postgresql://postgres:postgres@postgres:5432/pecantv
+    depends_on:
+      postgres:
+        condition: service_healthy
+    networks:
+      - pecantv_network
+
 volumes:
-  db_data: 
+  postgres_data:
+
+networks:
+  pecantv_network:
+    driver: bridge 
