Fix ngrok connection issues - add ATS exception and increase timeout

--- a/PecanTV/Info.plist
+++ b/PecanTV/Info.plist
@@ -32,6 +32,17 @@
                 <key>NSIncludesSubdomains</key>
                 <true/>
             </dict>
+            <key>ngrok-free.app</key>
+            <dict>
+                <key>NSExceptionAllowsInsecureHTTPLoads</key>
+                <true/>
+                <key>NSExceptionMinimumTLSVersion</key>
+                <string>TLSv1.0</string>
+                <key>NSExceptionRequiresForwardSecrecy</key>
+                <false/>
+                <key>NSIncludesSubdomains</key>
+                <true/>
+            </dict>
         </dict>
     </dict>
     <key>UIBackgroundModes</key>
